<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundLight">

    <LinearLayout android:id="@+id/aboutFragment"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/aboutHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/about_app"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/aboutDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutHeader"
                android:layout_marginBottom="10dp"
                android:text="@string/kindred_about"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/thirdPartiesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/aboutDetails"
                android:layout_marginBottom="5dp"
                android:text="@string/dependencies_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/butterKnifeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thirdPartiesText"
                android:text="@string/butterknife"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/butterknifeCR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/butterKnifeText"
                android:layout_marginBottom="7dp"
                android:text="@string/butterknife_cr"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/firebase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/butterknifeCR"
                android:layout_marginBottom="7dp"
                android:text="@string/firebase"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/material_drawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firebase"
                android:text="@string/material_drawer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/material_cr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/material_drawer"
                android:layout_marginBottom="7dp"
                android:text="@string/butterknife_cr"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/picasso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/material_cr"
                android:text="@string/picasso"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/picasso_cr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/picasso"
                android:layout_marginBottom="7dp"
                android:text="@string/square_cr"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/retro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/picasso_cr"
                android:text="@string/retrofit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/square_cr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/retro"
                android:layout_marginBottom="15dp"
                android:text="@string/square_cr"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/square_cr"
                android:layout_marginBottom="3dp"
                android:text="@string/chandler_cr"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/retro_cr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/personal"
                android:layout_marginBottom="5dp"
                android:text="@string/apache_license"
                android:textColor="@color/colorPrimaryDark"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>