<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundLight">


        <EditText
            android:id="@+id/editTitle"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textColorHint="@color/colorPrimaryDark"
            android:hint="@string/title_hint"/>

        <EditText
            android:id="@+id/editDescription"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTitle"
            android:hint="@string/description_hint"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textMultiLine"/>

        <CheckBox
            android:id="@+id/checkBoxIdea"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editDescription"
            android:layout_marginTop="15dp"
            android:buttonTint="@color/accent"
            android:textColor="@color/colorPrimaryDark"
            android:checked="false"
            android:text="@string/idea_checkbox"/>

        <CheckBox
            android:id="@+id/checkBoxTodo"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBoxIdea"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/accent"
            android:textColor="@color/colorPrimaryDark"
            android:checked="false"
            android:text="@string/todo_checkbox"/>

        <CheckBox
            android:id="@+id/checkBoxImportant"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBoxTodo"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/accent"
            android:textColor="@color/colorPrimaryDark"
            android:checked="false"
            android:text="@string/important_checkbox"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/checkBoxImportant"
            android:layout_marginTop="15dp"
            android:text="@string/cancel_button"/>

        <Button
            android:id="@+id/btnOK"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/btnCancel"
            android:text="@string/ok_button"/>

        <Button
            android:id="@+id/btnAddPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnCancel"
            android:layout_centerHorizontal="true"
            android:text="@string/add_photo"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/photoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editDescription"/>

    </RelativeLayout>
</RelativeLayout>